--- a/index.html
+++ b/index.html
@@ -263,34 +263,32 @@
 
     <!-- Discord Section -->
     <section id="discord">
-        <h2>Join the 24/24 Discord Community</h2>
-        <p>
-            Join us for constant communication and interaction in our Discord server!<br>
-        </p>
-        <a href="https://discord.gg/Ak6ZkjrjH" class="btn">Join the Discord</a>
+        <h2>Join the 0001dh Discord</h2>
+        <p>Connect with other fans and join the conversation!</p>
+        <a href="https://discord.gg/Ak6ZkjrjH" class="btn">Join Now</a>
     </section>
 
     <!-- TikTok Section -->
     <section id="tiktok">
         <h2>Follow on TikTok</h2>
-        <p>
-            Stay updated with the latest videos and fun content!<br>
-        </p>
-        <a href="https://www.tiktok.com/@ooo1dh" class="btn">Follow on TikTok</a>
+        <p>Stay updated with the latest trends and fun content!</p>
+        <a href="https://www.tiktok.com/@ooo1dh" target="_blank">
+            <img src="tiktok-icon.png" alt="TikTok" class="icon">
+        </a>
     </section>
 
     <!-- Roblox Section -->
     <section id="roblox">
-        <h2>Roblox</h2>
-        <p>
-            Join OOO1DH in exciting Roblox gameplay and adventures!<br>
-        </p>
-        <a href="https://www.roblox.com/users/2338568935/profile" class="btn">View ooo1's roblox profile</a>
+        <h2>Join ooo1dh on Roblox</h2>
+        <p>Join us for fun games and exciting adventures!</p>
+        <a href="https://www.roblox.com/users/0001dh" target="_blank">
+            <img src="roblox-icon.png" alt="Roblox" class="icon">
+        </a>
     </section>
 
     <!-- Footer -->
     <footer id="footer">
-        <p>© 2024 ooo1dh Fan Website | Developed by FSXStealth</p>
+        <p>&copy; 2024 ooo1dh Fan Website. All rights reserved.</p>
     </footer>
 </body>
 </html>
