--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
     <header id="home">
         <img src="ooo1.jpg" alt="ooo1dh Header" />
         <div class="header-content">
-            <h1>Welcome to ooo1dh's World</h1>
-            <p>Join a community of awesome fans and enjoy endless interactions!</p>
+            <h1>Welcome to ooo1dh's fanmade Website</h1>
+            <p>Join a community of kind fans and enjoy endless interactions!</p>
             <a href="https://discord.gg/Ak6ZkjrjH" class="btn">Join the Discord</a>
         </div>
         <div class="scroll-down">↓</div>
@@ -255,9 +255,7 @@
         <p>
             OOO1DH is a remarkably kind content creator who genuinely values and treats his fans with love and respect.<br>
             Known for his engaging and relatable content, he goes above and beyond to interact with his audience, responding to comments and celebrating their contributions.<br>
-            His positive influence fosters a sense of community, encouraging followers to express themselves and support one another.<br>
             Through uplifting messages and regular Q&A sessions, he creates a welcoming environment where everyone feels appreciated and included.<br>
-            OOO1DH’s dedication to kindness and connection makes him a beloved figure among his fans, reminding them of the importance of compassion in the digital world.
         </p>
     </section>
 
@@ -281,7 +279,7 @@
     <section id="roblox">
         <h2>Join ooo1dh on Roblox</h2>
         <p>Join us for fun games and exciting adventures!</p>
-        <a href="https://www.roblox.com/users/0001dh" target="_blank">
+        <a href="https://roblox.com/users/257963538/profile" target="_blank">
             <img src="roblox-icon.png" alt="Roblox" class="icon">
         </a>
     </section>
@@ -289,6 +287,7 @@
     <!-- Footer -->
     <footer id="footer">
         <p>&copy; 2024 ooo1dh Fan Website. All rights reserved.</p>
+        <p>            &copy; Developed by FSXStealth          </p>
     </footer>
 </body>
 </html>
