--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <section id="about">
         <h2>About ooo1dh</h2>
         <p>
-            OOO1DH is a remarkably kind content creator who genuinely values and treats his fans with love and respect.<br>
+            OOO1DH is a remarkably kind content creator who genuinely values and treats his fans with love and respect.
             Known for his engaging and relatable content, he goes above and beyond to interact with his audience, responding to comments and celebrating their contributions.<br>
             Through uplifting messages and regular Q&A sessions, he creates a welcoming environment where everyone feels appreciated and included.<br>
         </p>
