--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <body>
     <!-- Header Section with Image -->
     <header id="home">
-        <img src="ooo1.jpg" alt="ooo1dh Header" />
+        <img src="ooo1.PNG" alt="ooo1dh Header" />
         <div class="header-content">
             <h1>Welcome to ooo1dh's fanmade Website</h1>
             <p>Join a community of kind fans and enjoy endless interactions!</p>
