--- a/index.html
+++ b/index.html
@@ -253,9 +253,7 @@
     <section id="about">
         <h2>About ooo1dh</h2>
         <p>
-            OOO1DH is a remarkably kind content creator who genuinely values and treats his fans with love and respect.
-            Known for his engaging and relatable content, he goes above and beyond to interact with his audience, responding to comments and celebrating their contributions.<br>
-            Through uplifting messages and regular Q&A sessions, he creates a welcoming environment where everyone feels appreciated and included.<br>
+            ooo1, a proud Mexican and content creator known for his expertise in the Roblox game Evade, boasting over 2,500 subscribers. He has a deep love for Alfredo pasta and shares his life with his adorable cat, Mittens, who brings joy and laughter with her playful antics.<br>
         </p>
     </section>
 
