--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <section id="tiktok">
         <h2>Follow on TikTok</h2>
         <p>Stay updated with the latest trends and fun content!</p>
-        <a href="https://www.tiktok.com/@ooo1dh" target="_blank">
+        <a href="https://www.tiktok.com/@ooo1rbx" target="_blank">
             <img src="tiktok-icon.png" alt="TikTok" class="icon">
         </a>
     </section>
