--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <li><a href="#discord">Discord</a></li>
             <li><a href="#tiktok">TikTok</a></li>
             <li><a href="#roblox">Roblox</a></li>
-            <li><a href="#footer">Contact</a></li>
+            <li><a href="#footer">CopyRight</a></li>
         </ul>
     </nav>
 
