--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             height: 100%;
             background-image: url('ooo1.PNG');
             background-size: cover; /* Cover the entire viewport */
-            filter: blur(8px); /* Blur effect */
+            filter: blur(7px); /* Blur effect */
             z-index: -1; /* Place behind all other content */
         }
 
@@ -174,7 +174,7 @@
             <li><a href="#discord">Discord</a></li>
             <li><a href="#tiktok">TikTok</a></li>
             <li><a href="#roblox">Roblox</a></li>
-            <li><a href="#footer">Contact</a></li>
+            <li><a href="#footer">Copyright</a></li>
         </ul>
     </nav>
 
