--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
 
     <!-- Roblox Section -->
     <section id="roblox">
-        <h2>Play Roblox with ooo1dh</h2>
+        <h2>OOO1's Profile</h2>
         <p>Join in on the fun and play together!</p>
-        <a href="https://www.roblox.com/users/257963538/profile" class="btn"><i class="fab fa-roblox"></i>Join Roblox</a>
+        <a href="https://www.roblox.com/users/257963538/profile" class="btn"><i class="fab fa-roblox"></i>Teleport to OOO1's roblox profile</a>
     </section>
 
     <!-- Fanart Section -->
