--- a/index.html
+++ b/index.html
@@ -246,14 +246,13 @@
 
     <!-- Fanart Section -->
     <section id="fanart">
-        <h2>Fanart Gallery</h2>
-        <p>Check out some amazing fanart!</p>
+        <h2>Fanart section</h2>
+        <p>Click on the fanart to see who made it!</p>
         <div class="fanart-gallery">
             <img src="fanart1.webp" alt="Fanart 1" class="fanart" onclick="toggleDescription(this)">
             <img src="fanart2.webp" alt="Fanart 2" class="fanart" onclick="toggleDescription(this)">
             <img src="fanart3.webp" alt="Fanart 3" class="fanart" onclick="toggleDescription(this)">
             <img src="fanart4.webp" alt="Fanart 4" class="fanart" onclick="toggleDescription(this)">
-            <img src="fanart5.webp" alt="Fanart 5" class="fanart" onclick="toggleDescription(this)">
             <img src="fanart6.webp" alt="Fanart 6" class="fanart" onclick="toggleDescription(this)">
             <img src="fanart7.webp" alt="Fanart 7" class="fanart" onclick="toggleDescription(this)">
             <img src="fanart8.webp" alt="Fanart 8" class="fanart" onclick="toggleDescription(this)">
@@ -265,7 +264,6 @@
             <div class="fanart-description">Fanart made by LeeThebee</div>
             <div class="fanart-description">Fanart made by LeeTheBee</div>
             <div class="fanart-description">Fanart made by LeeThebee</div>
-            <div class="fanart-description">Fanart made by Leon</div>
             <div class="fanart-description">Fanart made by niik.i</div>
             <div class="fanart-description">Fanart made by LeeTheBee</div>
             <div class="fanart-description">Fanart made by vity</div>
@@ -278,7 +276,7 @@
     <!-- Footer -->
     <footer id="footer">
         <p>&copy; 2024 ooo1dh Fan Website. All rights reserved.</p>
-        <p>    &copy; Created and developed by : FSXStealth </p>
+        <p>     Created and developed by  FSXStealth </p>
     </footer>
 
 </body>
