--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <!-- Fanart Section -->
     <section id="fanart">
         <h2>Fanart section</h2>
-        <p>Click on the fanart to see who made it!</p>
+        <p>Here you will find some fanart of OOO1 :)</p>
         <div class="fanart-gallery">
             <img src="fanart1.webp" alt="Fanart 1" class="fanart" onclick="toggleDescription(this)">
             <img src="fanart2.webp" alt="Fanart 2" class="fanart" onclick="toggleDescription(this)">
