--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
             <img src="fanart8.webp" alt="Fanart 8" class="fanart" onclick="toggleDescription(this)">
             <img src="fanart9.webp" alt="Fanart 9" class="fanart" onclick="toggleDescription(this)">
             <img src="fanart10.webp" alt="Fanart 10" class="fanart" onclick="toggleDescription(this)">
+            <img src="fanart11.png" alt="Fanart 10" class="fanart" onclick="toggleDescription(this)">
         </div>
         <div id="fanart-descriptions">
             <div class="fanart-description">Fanart made by Bones</div>
